Ensure nav-bar border doesn't overlap tabs in lwtheme mode

--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -116,9 +116,14 @@
     border-top: 1px solid hsla(209,67%,12%,0.35) !important;
   }
   @media not all and (-moz-windows-compositor) {
-    #TabsToolbar[collapsed="true"] + #nav-bar {
+    #TabsToolbar[collapsed="true"] + #nav-bar,
+	#main-window[tabsontop=true] #nav-bar:-moz-lwtheme {
       border-top-style: none !important;
     }
+	
+	#TabsToolbar[tabsontop=true]:-moz-lwtheme {
+	  margin-bottom: 0;
+	}
   }
 }
 
